script/kind-session-persistence/tests/gateway-sticky/gateway-backend-whoami-cookie-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-cookie
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: whoami
