script/kind-session-persistence/tests/gateway-sticky/gateway-httproute-cookie.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sticky-whoami
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
  hostnames:
    - whoami.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami-cookie
          port: 80
      sessionPersistence:
        sessionName: traefik-sticky
        type: Cookie
        cookieConfig:
          lifetimeType: Session
